# mysfire

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  test.out
.github/workflows/: python-build.yml  python-ci-build.yml  python-package.yml
docs/: config.toml
docs/content/: _index.md
docs/content/getting-started/: _index.md  installation.md
docs/content/integrations/: _index.md  lightning.md
docs/content/processors/: _index.md  basic_types.md  h5py.md  images.md  numpy.md  pytorch.md  video.md
docs/content/processors/nlp/: _index.md  huggingface.md
docs/layouts/partials/: logo.html
mysfire/: __init__.py  __init___test.py  cloud_utils.py  dataset.py  lightning.py  one_shot.py  parser.py  s3_utils.py  vars_registry.py
mysfire/processors/: __init__.py  _array_utils.py  _processor.py  base_types_processor.py  base_types_processor_test.py  h5py_processor.py  image_processor.py  image_processor_test.py  npy_processor.py  npy_processor_test.py  pytorch_processor.py  pytorch_processor_test.py  video_processor.py  video_processor_test.py
mysfire/processors/nlp/: __init__.py  tokenization_processor.py
mysfire_scripts/: msrvtt-0.0.1.json  simple_data.tsv  test_h5py.py  test_one_shot_loader.py  test_processory.py  test_s3.py  test_s3.tsv  test_video.py  test_video.tsv  tokenizer.json
mysfire_scripts/extra_processors/: base_types.py
swiftly/: __init__.py  dataset.py  lightning.py  one_shot.py  parser.py  s3_utils.py  torch_utils.py
swiftly/processors/: __init__.py  _array_utils.py  _processor.py  base_types.py  h5py.py  h5py_processor.py  image.py  nlp.py  npy.py  pytorch.py  video.py
swiftly/processors/nlp/: tokenization_processor.py
swiftly_scripts/: msrvtt-0.0.1.json  simple_data.tsv  test_h5py.py  test_h5py.tsv  test_one_shot_loader.py  test_processory.py  test_s3.py  test_s3.tsv  test_video.py  tokenizer.json
swiftly_scripts/extra_processors/: base_types.py
test/example_data/: 1.npy  1.pt  2.npy  2.pt  3.npy  3.pt
