[tool.black]
line-length = 120
target_version =['py38']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )
)
'''

[tool.isort]
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.5"
tag_format = "$version"
version_files = [ "mysfire/__init__.py", "setup.cfg" ]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
