[metadata]
name = mysfire
author = David Chan
author_email = david@iridescent.io
version = attr: mysfire.__version__
description = Fast (and opinionated) data loading for pytorch
long_description = file: README.md, CHANGELOG.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/davidmchan/mysfire
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha

[options]
include_package_data = True
packages = find:
install_requires =
    numpy ~= 1.16
    torch ~= 1.4
    sly ~= 0.4

[options.packages.find]
exclude =
    mysfire_scripts


[options.package_data]
* = *.txt, *.rst, *.md, *.yaml, *.yml, *.json, *.html, *.css, *.js, *.png, *.jpg, *.jpeg, *.gif, *.ico, *.eot, *.woff, *.woff2, *.ttf, *.svg, *.otf
