[metadata]
name = mysfire
author = David Chan
author_email = david@iridescent.io
version = 0.1.2
description = Fast (and opinionated) data loading for pytorch
long_description = file: README.md, CHANGELOG.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/davidmchan/mysfire
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha

[options]
include_package_data = True
packages = find:
install_requires =
    numpy ~= 1.16
    torch ~= 1.4
    sly ~= 0.4

[options.extras_require]
    all =
        h5py ~= 3.3.0
        tokenizers ~= 0.9.0
        torchvision ~= 0.11
        pillow ~= 8.3.1
        pytorchvideo ~= 0.1.2
        boto3 ~= 1.16.9
    s3 =
        boto3 ~= 1.16.9
    video =
        pytorchvideo ~= 0.1.2
        torchvision ~= 0.11
        pillow ~= 8.3.1
    h5py =
        h5py ~= 3.3.0
    nlp =
        tokenizers ~= 0.9.0
    image =
        torchvision ~= 0.11
        pillow ~= 8.3.1
    dev =
        h5py ~= 3.3.0
        tokenizers ~= 0.9.0
        torchvision ~= 0.11
        pillow ~= 8.3.1
        pytorchvideo ~= 0.1.2
        boto3 ~= 1.16.9
        mypy ~= 0.931
        flake8 ~= 3.9.2
        black ~= 21.7b0
        flake8-black ~= 0.2.3
        isort ~= 5.9.3
        commitizen ~= 2.20.4
        pre-commit ~= 2.13.0


[options.packages.find]
exclude =
    mysfire_scripts

[options.package_data]
* = *.txt, *.rst, *.md, *.yaml, *.yml, *.json, *.html, *.css, *.js, *.png, *.jpg, *.jpeg, *.gif, *.ico, *.eot, *.woff, *.woff2, *.ttf, *.svg, *.otf
